--- a/NemoKachi/String/en-US/Resources.resw
+++ b/NemoKachi/String/en-US/Resources.resw
@@ -117,25 +117,22 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AccessingAccountImageURI" xml:space="preserve">
-    <value>Accessing your account image...</value>
-  </data>
   <data name="AccessingToken" xml:space="preserve">
     <value>Accessing your twitter token...</value>
   </data>
   <data name="AuthorizingApp" xml:space="preserve">
     <value>Authorizing this app on your account...</value>
   </data>
-  <data name="LoadingAccountImage" xml:space="preserve">
-    <value>Loading your account image...</value>
+  <data name="GettingAccountImageURI" xml:space="preserve">
+    <value>Getting your account image URI...</value>
   </data>
   <data name="LoadingAccountInformation" xml:space="preserve">
     <value>Loading your account information...</value>
   </data>
-  <data name="RecievingOAuthCallback" xml:space="preserve">
-    <value>Recieving OAuth callback...</value>
-  </data>
   <data name="VerifyingTempToken" xml:space="preserve">
     <value>Verifying your temporary twitter token...</value>
+  </data>
+  <data name="WaitingOAuthCallback" xml:space="preserve">
+    <value>Waiting OAuth callback...</value>
   </data>
 </root>
